<resources>
    <string name="app_name">GaiaGarden</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="entrar">Entrar</string>
    <string name="digite_sua_senha">Digite sua Senha</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="n_o_tenho_uma_conta">Não tenho uma conta</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="voltar">Voltar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirme_sua_senha">Confirme sua Senha</string>
    <string name="cat_logo_para_favoritar">catálogo para favoritar</string>
    <string name="escolha_alguns_produtos_do_nosso">Escolha alguns produtos do nosso</string>
    <string name="in_cio">Início</string>
    <string name="meus_favoritos">Meus favoritos</string>
    <string name="adicionar_aos_meus_favoritos">Adicionar aos meus favoritos</string>

    <string name="navigation_drawer_open">Abra a barra de navegação</string>
    <string name="navigation_drawer_close">Feche a barra de navegação</string>
    <string name="title_activity_produto_content_detail_host">ProdutoContentDetailHostActivity
    </string>
    <string name="title_produtocontent_list">Items</string>
    <string name="title_produtocontent_detail">ProdutoContent Detail</string>
</resources>