<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo3"
        style="@style/Logo3"
        android:src="@drawable/gaiagardensimples"

        android:layout_width="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barra"
        />

    <View
        android:id="@+id/barra"

        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginTop="96dp"

        android:background="@color/verde"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preencher"
        android:text="@string/preencha_todos_os_campos"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/titulo"
        android:textSize="19sp"
        android:textStyle="bold"

        android:layout_marginTop="35dp"

        app:layout_constraintStart_toStartOf="@id/cadastro"
        app:layout_constraintTop_toBottomOf="@id/cadastro"
        />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/n_o_tenho_uma_conta"

        android:textColor="@color/titulo"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/acesso"
        app:layout_constraintTop_toBottomOf="@id/acesso" />

    <TextView
        android:id="@+id/inscrevase"
        android:text="@string/inscreva_se"
        android:textColor="@color/titulo"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="16sp"
        android:textStyle="bold"

        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/acesso"

        app:layout_constraintStart_toEndOf="@id/cadastro"
        />

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/acesso"
        android:text="@string/acesse_sua_conta"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/titulo"
        android:textSize="38sp"
        android:textStyle="bold"


        app:layout_constraintTop_toBottomOf="@id/barra"
        app:layout_constraintLeft_toLeftOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        />

    <EditText
        android:id="@+id/email"
        style="@style/Edit_text"

        android:hint="@string/digite_seu_e_mail"

        android:inputType="textEmailAddress"

        android:layout_marginTop="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/senha"
        app:layout_constraintStart_toStartOf="@id/preencher"
        app:layout_constraintTop_toBottomOf="@id/preencher"
        />

    <EditText
        android:id="@+id/senha"
        style="@style/Edit_text"
        android:drawableRight="@drawable/olhosenha"

        android:hint="@string/digite_sua_senha"

        android:inputType="numberPassword"

        android:layout_marginTop="35dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/esqueceusenha"
        />

    <Button
        android:id="@+id/entrar"
        style="@style/Button"
        android:backgroundTint="@color/verde"
        android:text="@string/entrar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/esqueceusenha"
        android:text="@string/esqueceu_sua_senha"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/titulo"
        android:textStyle="bold"
        android:textSize="18sp"

        android:layout_marginTop="18dp"
        android:layout_marginRight="290dp"

        app:layout_constraintTop_toBottomOf="@id/senha"
        app:layout_constraintStart_toStartOf="@id/senha"
        />


</androidx.constraintlayout.widget.ConstraintLayout>