<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cadastro"
>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Cadastro">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:background="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Cadastrar"/>

    <TextView
        android:id="@+id/voltar"
        android:layout_width="84dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="284dp"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/baseline_keyboard_backspace_24"

        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
         />

    <TextView
        android:id="@+id/Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="30sp"
        android:textStyle="bold"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toTopOf="@id/preencha"
        />

    <TextView
        android:id="@+id/preencha"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/preencha_todos_os_campos"
        android:textColor="@color/texto"
        android:textSize="16sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toTopOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Cadastrar" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:layout_marginTop="20dp"

        android:hint="Digite seu E-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_tell"
        />

    <EditText
        android:id="@+id/edit_tell"
        style="@style/Edit_text"
        android:hint="Digite seu Nome"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_DataNasc"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/edit_DataNasc"
        style="@style/Edit_text"
        android:layout_marginTop="30dp"
        android:hint="Digite sua Data de Nascimento"

        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/edit_tell"
        app:layout_constraintTop_toBottomOf="@id/edit_tell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_Senha"/>

    <EditText
        android:id="@+id/edit_Senha"
        style="@style/Edit_text"
        android:drawableRight="@drawable/olhosenha"
        android:hint="Digite sua Senha"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/edit_DataNasc"
        app:layout_constraintTop_toBottomOf="@id/edit_DataNasc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view4"
        android:layout_marginTop="30dp"
        />


    <EditText
        android:id="@+id/edit_confsenha"
        style="@style/Edit_text"
        android:drawableRight="@drawable/olhosenha"
        android:hint="@string/confirme_sua_senha"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cadastrar"
        android:layout_marginTop="30dp"
        />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/cinza"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/edit_Senha"
        app:layout_constraintBottom_toTopOf="@id/edit_confsenha"
        />

    <Button
        android:id="@+id/cadastrar"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/verde"
        android:text="@string/cadastrar"
        android:textSize="25sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@id/edit_confsenha" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
